# milli-core

./: Cargo.toml  README.md
crates/benchmarks/: Cargo.toml
crates/benchmarks/benches/: indexing.rs  search_geo.rs  search_songs.rs  search_wiki.rs  utils.rs
crates/dump/src/reader/v6/: mod.rs
crates/filter-parser/src/: condition.rs  error.rs  value.rs
crates/fuzzers/: Cargo.toml
crates/index-scheduler/src/scheduler/: test_embedders.rs
crates/meilisearch-types/: Cargo.toml
crates/meilisearch-types/src/: batch_view.rs  batches.rs  document_formats.rs  error.rs  facet_values_sort.rs  keys.rs  lib.rs  locales.rs  settings.rs  task_view.rs  tasks.rs  versioning.rs
crates/meilisearch/src/routes/indexes/: settings_analytics.rs
crates/meilisearch/tests/settings/: vectors.rs
crates/meilitool/src/upgrade/: v1_9.rs
crates/milli/: Cargo.toml
crates/milli-core/: Cargo.toml  README.md
crates/milli-core/src/: filter_parser  flatten_serde_json.rs  lib.rs
crates/milli-core/src/documents/: builder.rs
crates/milli-core/src/update/: settings.rs
crates/milli-core/src/update/index_documents/: mod.rs  transform.rs
crates/milli-core/src/vector/: composite.rs  error.rs  mod.rs  settings.rs
crates/milli-core/tests/search/: distinct.rs  facet_distribution.rs  filters.rs  mod.rs  phrase_search.rs  query_criteria.rs  sort.rs  typo_tolerance.rs
crates/milli/src/: json_depth_checker.rs  lib.rs
crates/milli/src/search/facet/: filter.rs
crates/milli/src/update/new/: channel.rs
