[package]
name = "meilisearch-types"
publish = false

version.workspace = true
authors.workspace = true
description.workspace = true
homepage.workspace = true
readme.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
actix-web = { version = "4.9.0", default-features = false }
anyhow = "1.0.95"
bumpalo = "3.16.0"
bumparaw-collections = "0.1.4"
convert_case = "0.6.0"
csv = "1.3.1"
deserr = { version = "0.6.3", features = ["actix-web"] }
either = { version = "1.13.0", features = ["serde"] }
enum-iterator = "2.1.0"
file-store = { path = "../file-store" }
flate2 = "1.0.35"
fst = "0.4.7"
memmap2 = "0.9.5"
milli-core = { path = "../milli-core" }
roaring = { version = "0.10.10", features = ["serde"] }
rustc-hash = "2.1.0"
serde = { version = "1.0.217", features = ["derive"] }
serde-cs = "0.2.4"
serde_json = { version = "1.0.135", features = ["preserve_order"] }
tar = "0.4.43"
tempfile = "3.15.0"
thiserror = "2.0.9"
time = { version = "0.3.37", features = [
    "serde-well-known",
    "formatting",
    "parsing",
    "macros",
] }
tokio = "1.43"
utoipa = { version = "5.3.1", features = ["macros"] }
uuid = { version = "1.11.0", features = ["serde", "v4"] }

[dev-dependencies]
# fixed version due to format breakages in v1.40
insta = "=1.39.0"
meili-snap = { path = "../meili-snap" }

[features]
# all specialized tokenizations
all-tokenizations = ["milli-core/all-tokenizations"]

# chinese specialized tokenization
chinese = ["milli-core/chinese"]
chinese-pinyin = ["milli-core/chinese-pinyin"]
# hebrew specialized tokenization
hebrew = ["milli-core/hebrew"]
# japanese specialized tokenization
japanese = ["milli-core/japanese"]
# korean specialized tokenization
korean = ["milli-core/korean"]
# thai specialized tokenization
thai = ["milli-core/thai"]
# allow greek specialized tokenization
greek = ["milli-core/greek"]
# allow khmer specialized tokenization
khmer = ["milli-core/khmer"]
# allow vietnamese specialized tokenization
vietnamese = ["milli-core/vietnamese"]
# force swedish character recomposition
swedish-recomposition = ["milli-core/swedish-recomposition"]
# allow german tokenization
german = ["milli-core/german"]
# allow turkish normalization
turkish = ["milli-core/turkish"]
